# ermis-openmls

./: Cargo.toml  EPOCH_ARCHIVE_POC_PLAN.md  PIN_EPOCH_ARCHIVE_CTO_PROPOSAL.md  PIN_EPOCH_ARCHIVE_RESEARCH.md  openmls_websocket_flow.md
.github/workflows/: build.yml  build_test_workspace.yml  gh-pages.yml  tests.yml
cli/src/: backend.rs  user.rs
libcrux_crypto/: Cargo.toml
memory_storage/src/: lib.rs
openmls/: Cargo.toml
openmls-uniffi/: .gitignore  Cargo.toml  INTEGRATION.md  build.rs  build_mobile.sh  fix_kotlin_unit_funs.pl  fix_unit_funs.pl
openmls-uniffi/src/: errors.rs  group.rs  identity.rs  lib.rs  logger.rs  openmls_uniffi.udl  provider.rs  types.rs
openmls-uniffi/tests/: integration_test.rs
openmls-wasm/: Cargo.toml  README.md
openmls-wasm/src/: errors.rs  identity.rs  lib.rs  recovery_vault.rs  types.rs
openmls-wasm/src/group/: commit.rs  messaging.rs  mod.rs  proposal.rs  state.rs
openmls-wasm/static/: demo_chat_room.html  demo_chat_room_dynamic.html  ermis.html  ermisWorker.js  worker.js
openmls-wasm/static/react-chat-v2/: index.html  package-lock.json  package.json  vite.config.js
openmls-wasm/static/react-chat-v2/public/: openmls_wasm_bg.wasm
openmls-wasm/static/react-chat-v2/src/: App.tsx  index.css  (+1 more)
openmls-wasm/static/react-chat-v3/: index.html  package-lock.json  package.json  vite.config.js
openmls-wasm/static/react-chat-v4/: package-lock.json  package.json  vite.config.js
openmls/src/framing/: private_message_in.rs
openmls/src/tree/: secret_tree.rs
openmls_rust_crypto/src/: lib.rs
sqlite_storage/: Cargo.toml
(+16 files in other folders)
