[package]
name = "openmls-uniffi"
version = "0.1.0"
authors = ["OpenMLS Authors"]
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "openmls_uniffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
uniffi = { version = "0.28", features = ["cli"] }
openmls = { path = "../openmls" }
openmls_traits = { path = "../traits" }
openmls_rust_crypto = { path = "../openmls_rust_crypto" }
openmls_basic_credential = { path = "../basic_credential" }
openmls_sqlite_storage = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tls_codec = { workspace = true }
thiserror = "1"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
